test/src/e2e_vm_tests/test_programs/should_fail/double_underscore_var/src/main.sw
script;

fn main() {
    let a = 1;
    let _a = 1;
    let __a = 1;
}
